--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "ner": "^1.0.0",
         "readline": "^1.3.0",
         "thesaurus": "0.0.1",
+        "translate": "^1.2.3",
         "vue": "^2.6.11",
         "vue-chartjs": "^3.5.1",
         "vue-chat-scroll": "^1.4.0",
