--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
         "vue-chat-scroll": "^1.4.0",
         "vue-router": "^3.2.0",
         "vuex": "^3.6.2",
+        "wikipedia": "^1.1.0",
         "wink-ner": "^2.1.0",
         "wink-pos-tagger": "^2.2.2"
     },
